--- a/exercicis/ex1.html
+++ b/exercicis/ex1.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <header>
+        <img id="imagen-esquinada" src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/giftcard-email-geode-select-2021?wid=600&hei=600&fmt=png-alpha&.v=1653339397392" alt="Descripción de la imagen">
         <h1 id="tit">Tienda de Móviles</h1>
         <h2>Encuentra el móvil perfecto para ti</h2>
         <nav id="menu-principal">
             <ul>
-                <li class="active"><a href="#inicio">Inicio</a></li>
-                <li><a href="#productos">Productos</a></li>
+                <li class="active"><a href="#inicio">Productos</a></li>
                 <li><a href="#contacto">Contacto</a></li>
+            <br>
             </ul>
         </nav>
     </header>
