--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
 <h1>Ferran Lopez</h1>
 <a href="exercicis/ex1.html">Exercici 1</a>
+<a href="exercicis/exercici2.html">Exercici 2</a>
     </body>
 </html>
