--- a/exercicis/ex3.html
+++ b/exercicis/ex3.html
@@ -15,6 +15,7 @@
         <li><a href="#historia">Història</a></li>
         <li><a href="#capella">Capella</a></li>
         <li><a href="#videostres">Videotres</a></li>
+        <li><a href="#galeria">Galeria</a></li>
       </ul>
     </nav>
   </header>
@@ -28,7 +29,7 @@
     </div>
 
     <div class="column" id="capella">
-      <h2>Capella de Nostra Senyora de Montserrat</h2>
+      <h2>Capella de Nostra Senyora67de Montserrat</h2>
       <p>La capella, d'una única nau, estava adossada per un dels seus laterals al mas...</p>
       <p>El Barroc rural català i religiós va ser propi i destacat en les grans masies de l'època...</p>
       <!-- Más texto relacionado con la capella -->
@@ -36,16 +37,25 @@
     </div>
   </div>
 
+
   <div class="videotres" id="videostres">
     <iframe width="640" height="360" src="https://www.youtube.com/embed/bL1pQRP2xIU" title="Viladoms 1 360" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <iframe width="640" height="360" src="https://www.youtube.com/embed/1eCWR0s1O5Y" title="Viladoms 2 360" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <iframe width="640" height="360" src="https://www.youtube.com/embed/cFQ8k5YISl8" title="Viladoms 3 360" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
 
+
+  <div class="videotres" id="videostres">
+    <iframe width="90%" height="500px" allowFullScreen="true" allow="accelerometer; magnetometer; gyroscope" style="display:block; margin:20px auto; border:0 none; max-width:880px;border-radius:8px; box-shadow: 0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 6px 8px rgba(0,0,0,0.11),0 8px 16px rgba(0,0,0,0.11);" src="https://panoraven.com/es/embed/TGlY9zHxh1"></iframe>
+    <iframe width="90%" height="500px" allowFullScreen="true" allow="accelerometer; magnetometer; gyroscope" style="display:block; margin:20px auto; border:0 none; max-width:880px;border-radius:8px; box-shadow: 0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 6px 8px rgba(0,0,0,0.11),0 8px 16px rgba(0,0,0,0.11);" src="https://panoraven.com/es/embed/TGlY9zHxh1"></iframe> 
+  </div>
   <!-- Más secciones según sea necesario -->
 
   <footer>
     <p>&copy; 2022 Viladoms de Dalt</p>
+    <p>Gràcies per visitar Viladoms de Dalt!</p>
+    <p><a href="https://www.enlace1.com" target="_blank">Enllaç 1</a> | <a href="https://www.enlace2.com" target="_blank">Enllaç 2</a></p>
+  
   </footer>
 
 </body>
