--- a/exercicis/ex3.html
+++ b/exercicis/ex3.html
@@ -37,6 +37,11 @@
     </div>
   </div>
 
+  div {
+    column-count: 2;
+    <p> hola </p>
+  }
+
 
   <div class="videotres" id="videostres">
     <iframe width="640" height="360" src="https://www.youtube.com/embed/bL1pQRP2xIU" title="Viladoms 1 360" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
