--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <nav>
             <a href="exercicis/ex1.html">PROYECTO 1</a>
             <a href="exercicis/exercici2.html">PROYECTO 2</a>
-            <a href="exercicis/ex3.html">PROYECTO 3</a>
+            <a href="exercicis/ex3.html">PROYECTO 33</a>
+            <p>tonto</p>
         </nav>
     </header>
 
