--- a/index.html
+++ b/index.html
@@ -90,17 +90,12 @@
         </div>
     </section>
 
-    <section id="sobre-ti">
-        <h2>Sobre Ti</h2>
-        <!-- Información personal, hobbies, etc. -->
-    </section>
-
     <section id="contacto">
         <h2>Contacto</h2>
         <div class="contact-info">
             <p>Puedes contactarme a través de:</p>
-            <p>Email: tuemail@example.com</p>
-            <p>Teléfono: +123 456 789</p>
+            <p>Email: ferranlopez88@gmail.com</p>
+            <p>Teléfono: 623 22 21 46</p>
             <div class="social-icons">
                 <a href="https://www.instagram.com/tuinstagram" target="_blank">
                     <img src="https://imageurl.com/instagram-icon.png" alt="Instagram">
@@ -110,7 +105,7 @@
     </section>
 
     <footer>
-        &copy; 2024 - Tu Nombre
+        &copy; 2024 - Ferran Lopez Vidal
     </footer>
 
     <script src="index.js"></script>
